--- a/platformio.ini
+++ b/platformio.ini
@@ -77,7 +77,7 @@ lib_deps = ${esp32_lolin_s2_mini.lib_deps}
 test_ignore = ${esp32_lolin_s2_mini.test_ignore}
 
 [env:s2_mini_SK6812_RGBW_NEUTRAL]
-build_flags = -DNEOPIXEL_RGBW -DDATA_PIN=2 ${env.build_flags}
+build_flags = -DNEOPIXEL_RGBW -DDATA_PIN=2 ${env.build_flags} -DSECOND_SEGMENT_START_INDEX=176 -DSECOND_SEGMENT_DATA_PIN=4 -DSECOND_SEGMENT_REVERSED
 custom_prog_version = esp32_s2_mini_SK6812_RGBW_NEUTRAL
 
 board = lolin_s2_mini
