--- a/platformio.ini
+++ b/platformio.ini
@@ -105,7 +105,7 @@ lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
 test_ignore = *
 
 [env:esp8266_SK6812_RGBW_COLD]
-build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE ${env.build_flags} -DSECOND_SEGMENT_START_INDEX=176 -DSECOND_SEGMENT_DATA_PIN=4 -DSECOND_SEGMENT_REVERSED
+build_flags = -DNEOPIXEL_RGBW -DCOLD_WHITE ${env.build_flags}
 custom_prog_version = esp8266_SK6812_RGBW_COLD
 
 board = d1_mini
@@ -114,7 +114,7 @@ lib_deps = ${esp8266.lib_deps}
 test_ignore = ${esp8266.test_ignore}
 
 [env:esp8266_SK6812_RGBW_NEUTRAL]
-build_flags = -DNEOPIXEL_RGBW ${env.build_flags} -DSECOND_SEGMENT_START_INDEX=176 -DSECOND_SEGMENT_DATA_PIN=4 -DSECOND_SEGMENT_REVERSED
+build_flags = -DNEOPIXEL_RGBW ${env.build_flags}
 custom_prog_version = esp8266_SK6812_RGBW_NEUTRAL
 
 board = d1_mini
@@ -123,7 +123,7 @@ lib_deps = ${esp8266.lib_deps}
 test_ignore = ${esp8266.test_ignore}
 
 [env:esp8266_WS281x_RGB]
-build_flags = -DNEOPIXEL_RGB ${env.build_flags} -DSECOND_SEGMENT_START_INDEX=176 -DSECOND_SEGMENT_DATA_PIN=4 -DSECOND_SEGMENT_REVERSED
+build_flags = -DNEOPIXEL_RGB ${env.build_flags}
 custom_prog_version = esp8266_WS281x_RGB
 
 board = d1_mini
